# hvppydictionary

./: README.md  setup.cfg
src/hvppydictionary/: app.py  hotkeylistener.py  mainwindow.py
