[metadata]
name = hvppydictionary
version = 0.0.1
description = Quick dictionary
author = hvppycoding
author_email = hvppycoding@gmail.com

[options]
packages = find:
package_dir =
    =src
install_requires = 
    PySide6
    keyboard

[options.packages.find]
where = src

[options.entry_points]
gui_scripts = 
    hvppydictionary = hvppydictionary.app:main